--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 #sidepanel {
 	/*background-color: rgba(0,0,0,0.25);*/
 	width: 350px;
-	height: 800px;
+	float: left;
 	margin-left: 30px;
 
 }
@@ -28,14 +28,29 @@ body {
 	margin-top: 58px;
 	margin-bottom: 50px;
 	padding: 5px;
-	background-color: rgba(0,0,0,1);
-	color: white;
-	border: 2px solid white;
+	padding-left: 0px;
 	border-left: none;
 	opacity: 0;
+}
+
+.title span {
+	background-color: rgba(0,0,0,.75);
+	color: white;
+	border: 2px solid white;
+	border-left-style: none;
+	padding: 3px;
 }
 
 .test {
 	/*border: 1px solid red;*/
 	overflow: auto;
 }
+
+#content {
+	border: 1px solid red;
+	float: left;
+	height: 100%;
+	width: 100%;
+}
+
+
